--- a/src/FacebookAutomation/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/src/FacebookAutomation/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,89 +1,110 @@
 ﻿@{
-    ViewData["Title"] = "Forgot Password Confirmation";
+    ViewData["Title"] = "Confirmation Mot de passe oublié";
 }
 
-<h2>@ViewData["Title"].</h2>
-<p>
-    Please check your email to reset your password.
-</p>
 
 
-@section scriptcss {
-    <!-- CSS includes //-->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-    <!-- LayerSlider styles -->
-    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
+<main class="site-main">
 
-    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
-    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
+    <!-- Intro start //-->
 
-    <!-- JS includes //-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="~/biss/js/twitterFetcher_min.js"></script>
-}
+    <section class="align-left">
 
-@section Scripts {
+        <div class="container">
 
-    <!-- JS includes //-->
-    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
-    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
-    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
-    <script src="~/biss/js/masonry.pkgd.min.js"></script>
-    <script src="~/biss/js/less-1.7.4.min.js"></script>
-    <script src="~/biss/js/jquery.colorbox-min.js"></script>
-    <script src="~/biss/js/jquery.easing.1.3.js"></script>
-    <script src="~/biss/js/jquery.rivathemes.js"></script>
-    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-    <script src="~/biss/js/biss.js"></script>
+            <div class="row">
 
-    <script>
-        (function ($) {
-            "use strict";
+                <h2>@ViewData["Title"].</h2>
+                <p style="font-size:larger;">
+                    Veuillez verifier dans votre boite mail spv.Nous vous avons envoyé un mail pour reinitialiser
+                    votre mot de passe
+                </p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+</div>
+            </div>
+        </section>
+    </main>
 
-            //
-            // Preload images
-            //
+                @section scriptcss {
+                    <!-- CSS includes //-->
+                    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+                    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+                    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+                    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-            $('document').ready(function () {
+                    <!-- LayerSlider styles -->
+                    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-                var $container = $('body'),
-                    tweetsTimer;
+                    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+                    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-                $container.imagesLoaded(function () {
+                    <!-- JS includes //-->
+                    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+                    <!--[if lt IE 9]>
+                    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+                    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+                    <![endif]-->
+                    <script src="~/biss/js/twitterFetcher_min.js"></script>
+                }
 
-                    $('#spinner-wrapper').hide();
+                @section Scripts {
 
-                });
+                    <!-- JS includes //-->
+                    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+                    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+                    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+                    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+                    <script src="~/biss/js/masonry.pkgd.min.js"></script>
+                    <script src="~/biss/js/less-1.7.4.min.js"></script>
+                    <script src="~/biss/js/jquery.colorbox-min.js"></script>
+                    <script src="~/biss/js/jquery.easing.1.3.js"></script>
+                    <script src="~/biss/js/jquery.rivathemes.js"></script>
+                    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+                    <script src="~/biss/js/biss.js"></script>
 
-                clearTimeout(tweetsTimer);
+                    <script>
+                        (function ($) {
+                            "use strict";
 
-                $('#sendMessageBtn').click(function (e) {
-                    e.preventDefault();
-                    processSendEmail();
-                });
+                            //
+                            // Preload images
+                            //
 
-            });
+                            $('document').ready(function () {
 
-        })(jQuery);
-    </script>
+                                var $container = $('body'),
+                                    tweetsTimer;
 
-}
+                                $container.imagesLoaded(function () {
+
+                                    $('#spinner-wrapper').hide();
+
+                                });
+
+                                clearTimeout(tweetsTimer);
+
+                                $('#sendMessageBtn').click(function (e) {
+                                    e.preventDefault();
+                                    processSendEmail();
+                                });
+
+                            });
+
+                        })(jQuery);
+                    </script>
+
+                }
