--- a/src/FacebookAutomation/Views/Account/ForgotPassword.cshtml
+++ b/src/FacebookAutomation/Views/Account/ForgotPassword.cshtml
@@ -1,109 +1,137 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Mot de passe oublié ?";
 }
 
-<h2>@ViewData["Title"].</h2>
-<p>
-    For more information on how to enable reset password please see this <a href="http://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
-</p>
 
-@*<form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
-        <h4>Enter your email.</h4>
-        <hr />
-        <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Email" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+@*<p>
+        For more information on how to enable reset password please see this <a href="http://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
+    </p>*@
+
+
+
+
+
+<main class="site-main">
+
+    <!-- Intro start //-->
+
+    <section class="align-left">
+
+        <div class="container">
+
+            <div class="row">
+                <h2>@ViewData["Title"].</h2>
+
+
+                <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
+                    <h4>Veuillez saisir votre email.</h4>
+                    <hr />
+                    <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <button type="submit" class="btn btn-default">Valider</button>
+                        </div>
+                    </div>
+                </form>
+
+                </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-        </div>
-    </form>*@
+        </section>
+    </main>
 
 
-@section scriptcss {
-    <!-- CSS includes //-->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
+                
 
-    <!-- LayerSlider styles -->
-    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
-    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
+                @section scriptcss {
+                    <!-- CSS includes //-->
+                    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+                    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+                    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+                    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-    <!-- JS includes //-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="~/biss/js/twitterFetcher_min.js"></script>
-}
+                    <!-- LayerSlider styles -->
+                    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-@section Scripts {
+                    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+                    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-    <!-- JS includes //-->
-    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
-    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
-    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
-    <script src="~/biss/js/masonry.pkgd.min.js"></script>
-    <script src="~/biss/js/less-1.7.4.min.js"></script>
-    <script src="~/biss/js/jquery.colorbox-min.js"></script>
-    <script src="~/biss/js/jquery.easing.1.3.js"></script>
-    <script src="~/biss/js/jquery.rivathemes.js"></script>
-    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-    <script src="~/biss/js/biss.js"></script>
+                    <!-- JS includes //-->
+                    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+                    <!--[if lt IE 9]>
+                    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+                    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+                    <![endif]-->
+                    <script src="~/biss/js/twitterFetcher_min.js"></script>
+                }
 
-    <script>
-        (function ($) {
-            "use strict";
+                @section Scripts {
 
-            //
-            // Preload images
-            //
+                    <!-- JS includes //-->
+                    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+                    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+                    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+                    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+                    <script src="~/biss/js/masonry.pkgd.min.js"></script>
+                    <script src="~/biss/js/less-1.7.4.min.js"></script>
+                    <script src="~/biss/js/jquery.colorbox-min.js"></script>
+                    <script src="~/biss/js/jquery.easing.1.3.js"></script>
+                    <script src="~/biss/js/jquery.rivathemes.js"></script>
+                    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+                    <script src="~/biss/js/biss.js"></script>
 
-            $('document').ready(function () {
+                    <script>
+                        (function ($) {
+                            "use strict";
 
-                var $container = $('body'),
-                    tweetsTimer;
+                            //
+                            // Preload images
+                            //
 
-                $container.imagesLoaded(function () {
+                            $('document').ready(function () {
 
-                    $('#spinner-wrapper').hide();
+                                var $container = $('body'),
+                                    tweetsTimer;
 
-                });
+                                $container.imagesLoaded(function () {
 
-                clearTimeout(tweetsTimer);
+                                    $('#spinner-wrapper').hide();
 
-                $('#sendMessageBtn').click(function (e) {
-                    e.preventDefault();
-                    processSendEmail();
-                });
+                                });
 
-            });
+                                clearTimeout(tweetsTimer);
 
-        })(jQuery);
-    </script>
+                                $('#sendMessageBtn').click(function (e) {
+                                    e.preventDefault();
+                                    processSendEmail();
+                                });
 
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+                            });
+
+                        })(jQuery);
+                    </script>
+
+                    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+                }
