--- a/src/FacebookAutomation/Views/Account/ResetPassword.cshtml
+++ b/src/FacebookAutomation/Views/Account/ResetPassword.cshtml
@@ -1,121 +1,146 @@
 ﻿@model ResetPasswordViewModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Réinitialiser mot de passe";
 }
 
-<h2>@ViewData["Title"].</h2>
-
-<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal" role="form">
-    <h4>Reset your password.</h4>
-    <hr />
-    <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-    <input asp-for="Code" type="hidden" />
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Reset</button>
-        </div>
-    </div>
-</form>
 
 
-@section scriptcss {
-    <!-- CSS includes //-->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
-    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-    <!-- LayerSlider styles -->
-    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
-    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-    <!-- JS includes //-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="~/biss/js/twitterFetcher_min.js"></script>
-}
+<main class="site-main">
 
-@section Scripts {
+    <!-- Intro start //-->
 
-    <!-- JS includes //-->
-    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
-    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
-    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
-    <script src="~/biss/js/masonry.pkgd.min.js"></script>
-    <script src="~/biss/js/less-1.7.4.min.js"></script>
-    <script src="~/biss/js/jquery.colorbox-min.js"></script>
-    <script src="~/biss/js/jquery.easing.1.3.js"></script>
-    <script src="~/biss/js/jquery.rivathemes.js"></script>
-    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
-    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-    <script src="~/biss/js/biss.js"></script>
+    <section class="align-left">
 
-    <script>
-        (function ($) {
-            "use strict";
+        <div class="container">
 
-            //
-            // Preload images
-            //
+            <div class="row">
 
-            $('document').ready(function () {
 
-                var $container = $('body'),
-                    tweetsTimer;
+                <h2>@ViewData["Title"].</h2>
 
-                $container.imagesLoaded(function () {
+                <form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal" role="form">
+                    <h4>Réinitialiser votre mot de passe.</h4>
+                    <hr />
+                    <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+                    <input asp-for="Code" type="hidden" />
+                    <div class="form-group">
+                        <label asp-for="Email" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Password" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="Password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
+                        <div class="col-md-10">
+                            <input asp-for="ConfirmPassword" class="form-control" />
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <button type="submit" class="btn btn-default">Réinitialiser</button>
+                        </div>
+                    </div>
+                </form>
 
-                    $('#spinner-wrapper').hide();
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
-                });
 
-                clearTimeout(tweetsTimer);
 
-                $('#sendMessageBtn').click(function (e) {
-                    e.preventDefault();
-                    processSendEmail();
-                });
+                @section scriptcss {
+                    <!-- CSS includes //-->
+                    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+                    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+                    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+                    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+                    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-            });
+                    <!-- LayerSlider styles -->
+                    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-        })(jQuery);
-    </script>
+                    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+                    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+                    <!-- JS includes //-->
+                    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+                    <!--[if lt IE 9]>
+                    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+                    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+                    <![endif]-->
+                    <script src="~/biss/js/twitterFetcher_min.js"></script>
+                }
+
+                @section Scripts {
+
+                    <!-- JS includes //-->
+                    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+                    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+                    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+                    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+                    <script src="~/biss/js/masonry.pkgd.min.js"></script>
+                    <script src="~/biss/js/less-1.7.4.min.js"></script>
+                    <script src="~/biss/js/jquery.colorbox-min.js"></script>
+                    <script src="~/biss/js/jquery.easing.1.3.js"></script>
+                    <script src="~/biss/js/jquery.rivathemes.js"></script>
+                    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+                    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+                    <script src="~/biss/js/biss.js"></script>
+
+                    <script>
+                        (function ($) {
+                            "use strict";
+
+                            //
+                            // Preload images
+                            //
+
+                            $('document').ready(function () {
+
+                                var $container = $('body'),
+                                    tweetsTimer;
+
+                                $container.imagesLoaded(function () {
+
+                                    $('#spinner-wrapper').hide();
+
+                                });
+
+                                clearTimeout(tweetsTimer);
+
+                                $('#sendMessageBtn').click(function (e) {
+                                    e.preventDefault();
+                                    processSendEmail();
+                                });
+
+                            });
+
+                        })(jQuery);
+                    </script>
+
+                    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+                }
