--- a/src/FacebookAutomation/Views/Home/CreerUtilisateur.cshtml
+++ b/src/FacebookAutomation/Views/Home/CreerUtilisateur.cshtml
@@ -187,6 +187,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
                            
 
                             <input type="hidden" value="@ViewBag.NbreTotalLicence" name="NbreLicence">
+                            <input type="hidden" value="@ViewBag.idtrans" name="idtrans">
 
                         </div>
 
