--- a/src/FacebookAutomation/Views/Manage/ValiderLicence.cshtml
+++ b/src/FacebookAutomation/Views/Manage/ValiderLicence.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "Set Password";
 }
 
-<p class="text-info">
+@*<p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
-</p>
+</p>*@
 
 <form asp-controller="Manage" asp-action="ValiderLicence" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
     <h4>Enregistrement de la licence</h4>
