--- a/src/FacebookAutomation/Views/Manage/Index.cshtml
+++ b/src/FacebookAutomation/Views/Manage/Index.cshtml
@@ -28,9 +28,17 @@
 
 
 
+                   
+                   
+                    <p style="font-weight:bold;font-size:large;">Pour telecharger le logiciel <a style="color:#c83650;" href="~/download/f.rar"> Cliquez ici</a> </p>
+                    <hr />
                     <h4>Modifier les paramètres de compte</h4>
                     <hr />
                     <dl class="dl-horizontal" style="font-size:large;">
+
+                        
+                        
+
                         <dt>Mot de passe :</dt>
                         <dd>
                             @if (Model.HasPassword)
@@ -53,8 +61,7 @@
 
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
+                   
 
                     </div>
                 </div>
