--- a/src/FacebookAutomation/Views/Home/Faq.cshtml
+++ b/src/FacebookAutomation/Views/Home/Faq.cshtml
@@ -253,15 +253,16 @@
                     }
                     else
                     {
+                        <p>&nbsp;</p>
                         <p class="margin-top-0"  style="font-size:large;">
-                            Veuillez vous connecter pour voir les videos de formation sur le logiciel.
+                           <img src="~/biss/img/user.png" alt="user" /> Veuillez vous connecter pour voir les videos de formation sur le logiciel.
                         </p>
+                        
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
+                       
                     }
                    
 
