--- a/src/FacebookAutomation/Views/Home/Contact.cshtml
+++ b/src/FacebookAutomation/Views/Home/Contact.cshtml
@@ -235,9 +235,11 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
                            @* <p><i class="fa fa-map-marker primary-color"></i> 4192 Carriage Court, Twentynine Palms, CA 92277 </p>*@
 
-                            <p><i class="fa fa-phone primary-color"></i> 00 00 00 00</p>
+                            <p><i class="fa fa-phone primary-color"></i> 09 91 74 35</p>
 
-                            <p><i class="fa fa-envelope primary-color"></i> <a href="#">infos@facebookpub.net</a></p>
+                            @*<p><i class="fa fa-phone primary-color"></i> 09 91 74 35</p>*@
+
+                            <p><i class="fa fa-envelope primary-color"></i> <a href="#">mathieu.boa@itinnovation-ci.net</a></p>
 
                         </div>
 
