--- a/src/FacebookAutomation/Views/Shared/_Layout.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_Layout.cshtml
@@ -78,11 +78,11 @@
 
                             <div class="header-contacts scroll-hide hidden-xs">
 
-                                <p><i class="fa fa-phone"></i> 202-314-1583</p>
+                                <p><i class="fa fa-phone"></i> 09 91 74 35</p>
 
                                 <div class="cl"></div>
 
-                                <p><i class="fa fa-envelope"></i> infos@facebookpub.net</p>
+                                <p><i class="fa fa-envelope"></i> mathieu.boa@itinnovation-ci.net</p>
 
                             </div>
 
@@ -106,9 +106,9 @@
 
                                 <div class="sm-profiles">
 
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                    <a href="https://www.facebook.com/Facepubci/"><i class="fa fa-facebook"></i></a>
 
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    @*<a href="#"><i class="fa fa-twitter"></i></a>*@
 
                                     @*<a href="#"><i class="fa fa-behance"></i></a>
 
