--- a/src/FacebookAutomation/Views/Shared/_Layout.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
 
                                 <div class="cl"></div>
 
-                                <p><i class="fa fa-envelope"></i> mathieu.boa@itinnovation-ci.net</p>
+                                <p><i class="fa fa-envelope"></i>info@itinnovation-ci.net</p>
 
                             </div>
 
