--- a/src/FacebookAutomation/Views/Home/Contact.cshtml
+++ b/src/FacebookAutomation/Views/Home/Contact.cshtml
@@ -239,7 +239,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
                             @*<p><i class="fa fa-phone primary-color"></i> 09 91 74 35</p>*@
 
-                            <p><i class="fa fa-envelope primary-color"></i> <a href="#">mathieu.boa@itinnovation-ci.net</a></p>
+                            <p><i class="fa fa-envelope primary-color"></i> <a href="#">info@itinnovation-ci.net</a></p>
 
                         </div>
 
